--- a/src/components/home/home.styles.scss
+++ b/src/components/home/home.styles.scss
@@ -1,4 +1,13 @@
+.home_container {
+  text-align: center;
+}
+
 .home_image {
   width: 100%;
   height: 100%;
+}
+
+.image_copyright {
+  font-size: 13px;
+  color: gray;
 }
