--- a/src/components/section-title/section-title.styles.scss
+++ b/src/components/section-title/section-title.styles.scss
@@ -1,12 +1,10 @@
 .section_title_container {
+  margin: 50px 0;
 }
 
 .section_title {
-  color: lightpink;
-  font-size: 30px;
+  color: #e89e10;
+  font-size: 40px;
+  font-weight: 300;
   text-align: center;
-
-  @media screen and (max-width: 799px) {
-    margin: 20px 12px 30px;
-  }
 }
