--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   background-color: #000;
+  background-image: url("https://www.transparenttextures.com/patterns/stardust.png");
 }
 
 body ::selection {
