--- a/src/components/list/list.styles.scss
+++ b/src/components/list/list.styles.scss
@@ -1,10 +1,6 @@
-.list {
-  background-image: url("https://www.transparenttextures.com/patterns/snow.png");
-}
-
 .list_items {
   grid-gap: 10px;
-  border: 1px solid #fff;
+  border: 5px solid #2c394b;
   color: #fff;
   margin: 10px 30px 80px;
   padding: 40px;
